--- a/README.pod
+++ b/README.pod
@@ -64,6 +64,26 @@ of the screen as you mouse over an element.
     
     $result = $spotify->user( 'glennpmcdonald' );
 
+    # public play interaction example
+    # NEED TO SET YOUR o_auth client_id and secret for these to work
+    
+    $spotify->browse_featured_playlists( country => 'US' );
+    
+    my $link = $spotify->get('playlists.items[*].href');
+    
+    # $link is an arrayfef of the all the playlist urls
+    
+    foreach my $for_tracks (@{$link}) {
+        # make sure the links look valid
+        next if $for_tracks !~ /spotify\/play/;
+        $spotify->query_full_url($for_tracks,1);
+	my $pl_name = $spotify->get('name');
+	my $tracks  = $spotify->get('tracks.items[*].track.id');
+	foreach my $track (@{$tracks}) {
+            print "$track\n";
+        }
+    }
+
 =head1 METHODS
 
 =head2 get
@@ -80,6 +100,13 @@ last action.
  my $image_url = $spotify->get( 'artists.items[0].images[0].url' );
 
 JSON::Path is the underlying library that actually parses the JSON.
+
+=head2 query_full_url( $url , [needs o_auth] )
+
+Results from some calls (playlist for example) return full urls that can be in their entirety. This method allows you
+make a call to that url and use all of the o_auth and other features provided.
+
+    $spotify->query_full_url( "https://api.spotify.com/v1/users/spotify/playlists/06U6mm6KPtPIg9D4YGNEnu" , 1 );
 
 =head2 album
 
