--- a/Changes
+++ b/Changes
@@ -1,17 +1,19 @@
-0.004 - 23 November 2014
+{{$NEXT}}
+
+0.004 - 2014-11-23
  - Enhanced documentation
  - Added query_full_url to help work with playlist results
 
-0.003 - 23 October 2014
+0.003 - 2014-10-23
  - Changed album_tracks to albums_tracks to better match actual API call
  - Added browse_feature_playlist method
  - Added browse_new_releases method
  - Enhanced documentation
  - Improved tests
 
-0.002 - 26 June 2014
+0.002 - 2014-06-24
  - Resolved issue with undefined item which caused tests to fail on some platforms
  - Minor changes to documention
 
-0.001 - 23 June 2014
+0.001 - 2014-06-23
  - Initial releasee
