--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Switch from Moose to Moo + Type::Tiny
 
 0.005     2016-07-28 22:23:03-04:00 America/Toronto
  - GitHub repo url is now in metadata.
