Improve test debugging to figure out CPANTesters fails.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 - Allow users to provide their own useragents via "ua" arg to new().
+- Remove unused is_valid_json() method.
 
 0.006     2016-08-04 23:49:44-04:00 America/Toronto
 - Switch from Moose to Moo + Type::Tiny
