--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Require rather than use XML::Simple.
 
 0.008     2016-08-07 00:00:18-04:00 America/Toronto
 - Adds LWP::Protocol::https to dependencies.
