--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 {{$NEXT}}
-- tidy imports (GH#12) (Olaf Alders)
+- Tidy imports and drop support for perl 5.8 (GH#12) (Olaf Alders)
 
 0.010     2020-09-17 21:21:55Z
 - Fix credentials (GH#8) (trs-80)
