--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+- Change useragent base class from WWW::Mechanize to LWP::UserAgent (GH#13)
+  (Olaf Alders)
 - Tidy imports and drop support for perl 5.8 (GH#12) (Olaf Alders)
 
 0.010     2020-09-17 21:21:55Z
