--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+{{$NEXT}}
+
 0.011     2022-10-14 20:21:00Z
 - Change useragent base class from WWW::Mechanize to LWP::UserAgent (GH#13)
   (Olaf Alders)
