--- a/Changes
+++ b/Changes
@@ -1,4 +1,13 @@
 {{$NEXT}}
+- Improved options for error handling (GH#11)
+- Improved last_error
+- Added check_response
+- Added request_custom_handler
+- Added request_custom_handler_result
+- Added response_content_type
+- Added response_status
+
+0.011
 - Change useragent base class from WWW::Mechanize to LWP::UserAgent (GH#13)
   (Olaf Alders)
 - Tidy imports and drop support for perl 5.8 (GH#12) (Olaf Alders)
